# nRF51822

./: CMakeLists.txt
